// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`recipes reducer add action should add recipe to a non-empty list 1`] = `
Array [
  Object {
    "description": "1",
    "favorite": false,
    "id": 1,
    "title": "first",
  },
  Object {
    "description": "2",
    "favorite": false,
    "id": 2,
    "title": "second",
  },
]
`;

exports[`recipes reducer add action should add recipe to empty list 1`] = `
Array [
  Object {
    "description": "desc",
    "favorite": false,
    "id": 1,
    "title": "test",
  },
]
`;
